# ai-digest

./: .gitignore  AI_Digest -Design Log.md  Planned_Featured.md  README.md  ai-digest.py  pyproject.toml  webhook.py
