[tool.poetry]
name = "ai-digest"
version = "0.1.0"
description = ""
authors = ["Kavya Chigurupati <chigurupatik98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.76.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
